fix(markdown): Vditor code block width on mobile

--- a/src/components/markdown/index.css
+++ b/src/components/markdown/index.css
@@ -2,3 +2,7 @@
 .vditor-ir__link {
   color: #4285f4;
 }
+
+.vditor-reset pre {
+  width: calc(100vw - 2rem);
+}
